# OpenGL_Practice

./: .gitignore  CMakeLists.txt
include/: shader.h
shaders/: fshader.fs  vshader.vs
src/: main.cpp
